<resources>
    <string name="app_name">Android Tutorials</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="lesson_title">Lesson Title</string>
    <string name="upload_file">Upload file</string>
    <string name="choose_file">Choose File</string>
    <string name="add_new_lesson">Add new lesson</string>
    <string name="add_lesson">Add lesson</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prev_lesson">Prev lesson</string>
    <string name="feedback">Feedback</string>
    <string name="next_lesson">Next lesson</string>
    <string name="new_problem">New problem</string>
    <string name="check">Check</string>
    <string name="hint">Hint</string>
    <string name="solution">Solution</string>
    <string name="problem">Problem:</string>
    <string name="close">Close</string>
    <string name="difficult_level">Difficult level:</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="ease">Ease</string>
    <string name="ok">ok</string>
    <string name="select_lesson">SELECT LESSON</string>
    <string name="cancel">Cancel</string>
    <string name="update_pass">Update pass</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change password</string>
    <string name="info">Info</string>
    <string name="version_info">Version info</string>
    <string name="help">help</string>
    <string name="support">Support</string>
    <string name="score">Score:</string>
</resources>
