<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_bray_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_password"
            android:icon="@drawable/ic_lock_bray_24dp"
            android:title="@string/change_password" />
    </group>

    <item android:title="@string/info">
        <menu>
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_info_bray_24dp"
                android:title="@string/version_info" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/help" />
        </menu>
    </item>

</menu>
