<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"
        android:clickable="false"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <include layout="@layout/app_bar"
            android:id="@+id/add_lesson_toolbar" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_lesson"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="30sp"
            />

        <TextView
            android:layout_marginTop="@dimen/fab_margin"
            android:id="@+id/lblLessonTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lesson_title"
            style="@style/text_style"
            />

        <EditText
            android:id="@+id/edtLessonTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

        <TextView
            android:id="@+id/lblUploadFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_file"
            style="@style/text_style"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/btnUploadFile"
                />

            <Button
                android:id="@+id/btnUploadFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_file"
                android:scaleType="fitCenter"
                android:layout_alignParentEnd="true"
                />

        </RelativeLayout>

        <Button
            android:id="@+id/btnAddNewLesson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/add_new_lesson"/>
    </LinearLayout>


</RelativeLayout>