<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clickable="false"/>

    <include layout="@layout/app_bar"
    android:id="@+id/test_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_below="@id/test_toolbar"
        android:id="@+id/llQuestion">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblProblem"
            android:text="@string/problem"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            style="@style/text_style_bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblQuestionContent"
            style="@style/text_style"
            android:text="Question 1: 1+1="
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llAnswer"
        android:layout_below="@+id/llQuestion"
        android:layout_above="@+id/llBottomFunctionTest">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/llBottomFunctionTest"
        android:layout_alignParentBottom="true"
        >
        <Button
            android:id="@+id/btnNewProblem"
            android:drawableTop="@drawable/ic_add_problem_24dp"
            android:layout_width="0dp"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/new_problem"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="0dp"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:background="@color/bounty"
            />

        <Button
            android:id="@+id/btnCheckAnswer"
            android:drawableTop="@drawable/ic_check_black_24dp"
            android:layout_width="0dp"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/check"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="0dp"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:background="@color/sea_green"
            />

        <Button
            android:id="@+id/btnHintQuestion"
            android:drawableTop="@drawable/ic_hint_24dp"
            android:layout_width="0dp"
            android:text="@string/hint"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:background="@color/oceana"
            />

        <Button
            android:id="@+id/btnSolution"
            android:drawableTop="@drawable/ic_vpn_key_black_24dp"
            android:layout_width="0dp"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/solution"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:background="@color/rosada"
            />

    </LinearLayout>

</RelativeLayout>